--- a/common.css
+++ b/common.css
@@ -6,4 +6,10 @@
 }
 
 html {
+    font-family: Poppins, sans-serif;
+    /* font-family: "Montserrat",sans-serif; */
+    /* font-family: 'Courier New', Courier, monospace; */
+    text-decoration: none;
+    text-transform: none;
+    line-height: 1.5;
 }
