--- a/content.css
+++ b/content.css
@@ -1,7 +1,8 @@
 .content {
     width: 100%;
-    height: 800px;
+    height: 940px;
     background-image: url('./assets/imgs/slide1.jpg') ;
     background-repeat: no-repeat;
-    background-size: 1856px 800px;
+    background-size: 100% ;
+    background-position: center;
 }
