--- a/nav.css
+++ b/nav.css
@@ -2,6 +2,18 @@
     display: flex;
     flex-direction: row;
     position: fixed;
+    width: 100%;
+    height: 120px;
+    /* margin-left: 178px; */
+    padding: 0 20px;
+    /* background-color: rgba(125,336,568,0.2); */
+    justify-content: space-between;
+    /* align-items: center; */
+}
+
+#nav ul {
+    align-self: center;
+
 }
 
 #nav li {
@@ -9,19 +21,35 @@
 }
 
 #nav li a {
-    text-decoration: none;
-    color: coral;
-    font-size: 1.2em;
-    padding: 10px;
+    
+}
+
+#nav li a:hover {
+    color: #ccc;
 }
 
 #nav li img {
     width: 72px;
-    height: 72px;
+    height: 78px;
     /* border-radius: 50%; */
+    margin-left: 178px;
 }
 
 #nav .nav-2 {
     display: flex;
     flex-direction: row;
+    /* margin: 0 20px; */
+    margin-right: 178px;
+}
+
+.nav-2 li a {
+    height: 45px;
+    display: inline-block;
+
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    opacity: 0.85;
+    font-size: 17px;
+    padding: 10px;
+    font-weight: 300;
 }
