--- a/styles/content-1.css
+++ b/styles/content-1.css
@@ -37,19 +37,51 @@
 /* course */
 
 .course-1 {
+    height: 970px;
     display:flex;
     flex-direction: row;
+    justify-content: space-between;
+    /* background-color: #ccc; */
 }
 
 .course-1 .description-course {
     flex-basis: 50%;
+    margin: 180px 0;
+    font-size: 19px;
+    color: rgb(56, 37, 92);
+
+}
+
+.course-1 .description-course h4 {
+    font-size: 44px;
+    margin-bottom: 20px;
+    font-weight: bold;
+    margin: 0 80px;
+}
+
+.course-1 .description-course p {
+    margin: 20px 80px 32px;
+}
+
+.course-1 .description-course .detail-course {
+    margin-left: 80px;
+    list-style: none;
+}
+
+.description-course .detail-course li {
+    margin: 10px 0;
 }
 
 .course-1 .image-course {
     flex-basis: 50%;
+    background: url("/assets/imgs/img6.jpg") no-repeat ;
+    background-size: cover;
+    background-position: center;
 }
 
 .course-1 .button-course button {
+    margin-top: 40px;
+    margin-left: 80px;
     height: 50px;
     background-image: linear-gradient(-180deg, rgb(255, 202, 104) 5%, rgb(255, 88, 160) 90%);
     border-radius: 25px;
