--- a/styles/content-5.css
+++ b/styles/content-5.css
@@ -48,39 +48,109 @@
     margin: 0 20px;
 
     /* position: relative; */
+    
+}
+
+.content-5 .list-training .li-wrapper {
+    display: block;
+    position: relative;
+
+    /* border: solid #333 1px;
+    border-radius: 20px; */
+}
+
+.content-5 .list-training .li-box-2 {
+    /* border: solid 2px #333; */
+    top: -20px;
 }
 
 .content-5 .top-content {
     background: rgba(247, 245, 251, 0.4);
-    display:flex;
+    backdrop-filter: blur(15px);
 
-    position: relative;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+
+    /* position: relative; */
     
     width: 348px;
-    height: 300px;
+    height: 275px;
+
+    /* border: solid #333 2px; */
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.content-5 .top-content-box-2 {
+    height: 295px;
 }
 
 .content-5 .top-content h2 {
     font-weight: bold;
     text-align: center;
+    font-size: 32px;
 
-    margin: auto;
+    padding-top: 200px;
+    
 }
 
 .content-5 .polygon-box {
-    display: block;
-    background-color: rgba(247, 245, 251, 0.4);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
+    /* background-color: rgba(247, 245, 251, 0.4); */
+    background-color: #fff;
 
     position: absolute;
-    /* top: -200px;
-    right: 80px; */
+    top: -13px;
 
-    width: 180px;
-    height: 180px;
+    width: 196px;
+    height: 165px;
+    margin-left: 8px;
+    margin-right: 8px;
+
+    border: solid 1px  rgb(178, 166, 200);
+
+    /* polygon */
+    clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 50% calc(100% - 1px), 0% 75%);
+
+}
+
+.content-5 .polygon-box-2 {
+    height: 185px;
+}
+
+.content-5 .polygon-box p {
+    text-align: center;
+}
+
+.content-5 .polygon-box::before,
+.content-5 .polygon-box::after {
+    position: absolute;
+    content: "";
+    display: block;
+
+    width: 8px;
+    height: 13px;
+    background-color:  coral;
+}
+
+.content-5 .polygon-box::before {
+    left: -16px;
+}
+
+.content-5 .polygon-box::after {
+    right: 0px;
 }
 
 .content-5 .bottom-content {
     background-color: #fff;
+
+    /* border: solid coral 1px; */
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     
 }
 
