--- a/styles/content-1.css
+++ b/styles/content-1.css
@@ -1,10 +1,11 @@
 .discounted-price {
-  padding: 80px 0;
-  background-image: linear-gradient(rgba(56, 37, 92, 0.8), rgba(56, 37, 92, 0.8));
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: #fff;
+    padding: 80px 180px;
+    background-image: linear-gradient(rgba(56, 37, 92, 0.8), rgba(56, 37, 92, 0.8));
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
 }
 
 /* button css same as button in slider */
@@ -13,7 +14,8 @@
     background-image: linear-gradient(-180deg, rgb(255, 202, 104) 5%, rgb(255, 88, 160) 90%);
     border-radius: 25px;
     color: #fff;
-    font-size: 14px;
+    font-size: 15px;
+    font-weight: 400;
     border: none;
     cursor: pointer;
     padding: 0 40px;
@@ -21,15 +23,16 @@
 
 .discounted-price button:hover {
     background: rgb(255, 88, 160);
-
 }
 
 .discounted-price h4 {
     font-size: 44px;
+    font-weight: 700;
 }
 
 .discounted-price p {
     font-size: 19px;
+    font-weight: 300;
     margin-top: 20px;
     margin-bottom: 24px;
 }
@@ -54,13 +57,13 @@
 
 .course-1 .description-course-1 h4 {
     font-size: 44px;
-    margin-bottom: 20px;
-    font-weight: bold;
+    font-weight: 700;
     margin: 0 80px;
 }
 
 .course-1 .description-course-1 p {
     margin: 20px 80px 32px;
+    font-weight: 300;
 }
 
 .course-1 .description-course-1 .detail-course-1 {
@@ -70,6 +73,7 @@
 
 .description-course-1 .detail-course-1 li {
     margin: 10px 0;
+    font-weight: 300;
 }
 
 .description-course-1 .detail-course-1 i {
