--- a/styles/content-3.css
+++ b/styles/content-3.css
@@ -16,8 +16,7 @@
     display: flex;
     justify-content: center;
 
-    margin-left: 100px;
-    margin-right: 100px;
+    margin: 0 auto;
     padding-bottom: 100px;
     
     list-style: none;
