--- a/styles/content-4.css
+++ b/styles/content-4.css
@@ -11,8 +11,9 @@
 .content-4 {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    margin: 50px 350px;
+    justify-content: space-between;
+    width: 980px;
+    margin: 50px auto;
     font-size: 18.3px;
     color: rgb(103, 86, 134);
 }
@@ -58,6 +59,7 @@
 
 .content-text {
     padding: 20px 0;
+    margin-left: 30px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
