--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,14 +1,27 @@
+.nav-bar {
+    position: fixed;
+    z-index: 10;
+    left: 0;
+    right: 0;
+}
+
 #nav {
     display: flex;
     flex-direction: row;
-    position: fixed;
+    position: relative;
     width: 100%;
+    max-width: 1500px;
+    margin: 0 auto;
     height: 120px;
     /* margin-left: 178px; */
     padding: 0 20px;
     /* background-color: rgba(125,336,568,0.2); */
     justify-content: space-between;
-    /* align-items: center; */
+    align-items: center;
+
+}
+
+#nav-1 {
 
 }
 
@@ -37,7 +50,7 @@
     width: 72px;
     height: 78px;
     /* border-radius: 50%; */
-    margin-left: 178px;
+    /*margin-left: 178px;*/
 
     cursor: pointer;
 
@@ -47,7 +60,7 @@
     display: flex;
     flex-direction: row;
     /* margin: 0 20px; */
-    margin-right: 178px;
+    /*margin-right: 178px;*/
 }
 
 .nav-2 li a {
