--- a/styles/content-3.css
+++ b/styles/content-3.css
@@ -16,7 +16,8 @@
     display: flex;
     justify-content: center;
 
-    margin: 0 auto;
+    margin-left: 100px;
+    margin-right: 100px;
     padding-bottom: 100px;
     
     list-style: none;
