--- a/styles/content-4.css
+++ b/styles/content-4.css
@@ -11,9 +11,8 @@
 .content-4 {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    width: 980px;
-    margin: 50px auto;
+    justify-content: space-around;
+    margin: 50px 350px;
     font-size: 18.3px;
     color: rgb(103, 86, 134);
 }
@@ -59,7 +58,6 @@
 
 .content-text {
     padding: 20px 0;
-    margin-left: 30px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
