--- a/styles/content-5.css
+++ b/styles/content-5.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 1060px;
     padding: 80px 0;
-    background: url("/assets/imgs/img4.jpg") center / cover no-repeat;
+    background: url("../assets/imgs/img4.jpg") center / cover no-repeat;
 
     display: flex;
     flex-direction: column;
@@ -229,8 +229,8 @@
 .content-5 .content-5-button_1,
 .content-5 .content-5-button_2,
 .content-5 .content-5-button_3 {
-    display: flex;
-    justify-content: center;
+    /* display: flex;
+    justify-content: center; */
 
     margin-top: 32px;
     padding: 0 20px 50px;
