--- a/styles/footer.css
+++ b/styles/footer.css
@@ -85,7 +85,7 @@
 .footer .get-notified .logo-footer {
     width: 105px;
     height: 115px;
-    background: url("/assets/imgs/logo-1.png") center center / cover no-repeat;
+    background: url("../assets/imgs/logo-1.png") center center / cover no-repeat;
     animation: 1.5s cubic-bezier(0.23, 1, 0.32, 1) 0.1s 1 normal forwards running fadeInImg;
 }
 
@@ -94,7 +94,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    
+    height: 80px;
+
     padding: 22px 200px;
     color: rgb(56, 37, 92);
 }
