--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,27 +1,16 @@
-.nav-bar {
-    position: fixed;
-    z-index: 10;
-    left: 0;
-    right: 0;
-}
-
 #nav {
     display: flex;
     flex-direction: row;
-    position: relative;
+    position: fixed;
     width: 100%;
-    max-width: 1500px;
-    margin: 0 auto;
     height: 120px;
     /* margin-left: 178px; */
     padding: 0 20px;
     /* background-color: rgba(125,336,568,0.2); */
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
 
-}
-
-#nav-1 {
+    z-index: 2;
 
 }
 
@@ -47,10 +36,11 @@
 }
 
 #nav li img {
+    object-fit: center;
     width: 72px;
     height: 78px;
     /* border-radius: 50%; */
-    /*margin-left: 178px;*/
+    margin-left: 178px;
 
     cursor: pointer;
 
@@ -60,7 +50,7 @@
     display: flex;
     flex-direction: row;
     /* margin: 0 20px; */
-    /*margin-right: 178px;*/
+    margin-right: 178px;
 }
 
 .nav-2 li a {
