--- a/styles/slider.css
+++ b/styles/slider.css
@@ -1,24 +1,22 @@
-.slider-background {
-    background: linear-gradient(rgba(56, 37, 92, 0), rgba(56, 37, 92, 0)), url('/assets/imgs/slide1.jpg') center center / cover no-repeat;
-    height: 870px;
-}
-
 .slider {
-    max-width: 1560px;
     width: 100%;
-    height: 100%;
-    margin: 0 auto;
+    height: 940px;
+    background: url('../assets/imgs/slide1.jpg') ;
+    background-repeat: no-repeat;
+    background-size: 100% ;
+    background-position: center;
 
     display: flex;
     flex-direction: row;
     align-items: center;
-    /*justify-content: space-between;*/
-    padding: 160px 0 60px 0;
+    justify-content: space-between;
+    padding: 0 0;
 
 }
 
 /* Content slider */
 .content-slider {
+    margin: 0 190px;
     width: 100%;
     height: 100%;
     
@@ -37,6 +35,7 @@
 }
 
 .content-slider .serial {
+    padding-top: 150px;
     display: flex;
     color: #fff;
     align-items: flex-end;
@@ -62,20 +61,19 @@
 }
 
 .content-slider_heading {
-    padding-top: 100px;
+    padding-top: 120px;
     padding-bottom: 16px;
-    width: fit-content;
     font-size: 56px;
-    font-weight: 700;
+    font-weight: bold;
     color: #fff;
     /* margin-bottom: 20px; */
 }
 
 .content-slider_description {
-    color: rgba(255, 255, 255);
+    color: #ddd;
     font-size: 19px;
-    width: 640px;
-    font-weight: 300;
+    width: 42%;
+    font-weight: normal;
     padding-bottom: 30px;
 }
 
@@ -95,20 +93,16 @@
 
 }
 
-#slider-3-dots {
-    margin-top: 150px;
-}
-
 .content-slider_dot {
     width: 10px;
     height: 10px;
     background-color: transparent;
     border-radius: 50%;
-    margin-left: 5px;
+    margin: 0 5px;
     display: inline-block;
     cursor: pointer;
     border: solid #ddd 1px;
-    /*margin-bottom: -200px;*/
+    margin-bottom: -200px;
 }
 
 .dot-1 {
@@ -124,10 +118,12 @@
 }
 
 .prev-button {
-    padding-right: 50px;
+    margin-left: 150px;
+    margin-right: -150px;
 }
 
 .next-button {
-    padding-left: 50px;
+    margin-left: -150px;
+    margin-right: 150px;
 }
 
