--- a/styles/button-top.css
+++ b/styles/button-top.css
@@ -1,11 +1,7 @@
 
-body {
-    position: relative;
-}
-
 .button-top {
-    position: absolute;
-    display: block;
+    position: fixed;
+    display: none;
 
     right: 10px;
     bottom: 20px;
@@ -16,12 +12,19 @@ body {
     background-color: rgb(255,255,255);
     border: solid 1px coral;
     border-radius: 50%;
-    padding: 13px 13px;
+    /* padding: 13px 13px; */
     box-shadow: rgb(56 37 92 / 15%) 0px 4px 8px;
 
+    animation: slowly 1.5s infinite alternate-reverse;
+
+}
+.button-top a {
+    position: absolute;
+    padding: 13px 13px;
 }
 
 .button-top i { 
+   
     color: rgb(255, 88, 160);
     font-size: 20px;
     font-weight: bold;
