--- a/styles/common.css
+++ b/styles/common.css
@@ -19,6 +19,10 @@ button {
     cursor: pointer;
 }
 
+button:active {
+    background: rgb(255, 88, 160) !important;
+}
+
 input {
     font-family: Poppins;
 }
@@ -27,3 +31,22 @@ a {
     text-decoration: none;
     color: #fff;
 }
+
+html ::-webkit-scrollbar {
+    width: 10px;
+    height: 100%;
+}
+
+html ::-webkit-scrollbar-track {
+    background-image: linear-gradient(135deg, rgb(27, 138, 105) 5%, rgb(133, 45, 86) 90%);
+    border: 1px solid rgb(216, 213, 44);
+    border-radius: 20px;
+}
+
+html ::-webkit-scrollbar-thumb {
+    background-color: rgb(175, 125, 49);
+    border: 1px solid rgb(136, 180, 54);
+    border-radius: 25%;
+
+}
+
