--- a/styles/content-7.css
+++ b/styles/content-7.css
@@ -46,6 +46,7 @@
 .content-7 .get-inform .get-name,
 .content-7 .get-inform .get-email {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .content-7 .form-contact input {
@@ -94,5 +95,22 @@
     box-shadow: rgb(255 88 160 / 50%) 0px 4px 10px 0px;
 
     align-self: flex-end;
+
+    color: #fff;
+
+}
+
+.content-7 .send-form-btn button:hover {
+    background: rgb(255, 202, 104);
+    
+}
+
+.content-7 .alert-empty_inputName,
+.content-7 .alert-empty_inputEmail {
+    color: red;
+    font-size: 14px;
+    margin-top: -18px;
+    margin-left: 4px;
+    display: none;
 
 }
