--- a/styles/slider.css
+++ b/styles/slider.css
@@ -1,8 +1,10 @@
 .slider {
     width: 100%;
     height: 940px;
-    background: linear-gradient(rgba(56, 37, 92, 0), rgba(56, 37, 92, 0)), url('../assets/imgs/slide1.jpg') center center / cover no-repeat;
+    background: url('../assets/imgs/slide1.jpg') ;
+    background-repeat: no-repeat;
     background-size: 100% ;
+    background-position: center;
 
     display: flex;
     flex-direction: row;
@@ -17,7 +19,7 @@
     margin: 0 190px;
     width: 100%;
     height: 100%;
-
+    
 }
 
 .content-slider ul {
@@ -71,7 +73,6 @@
     color: #ddd;
     font-size: 19px;
     width: 42%;
-    height: 175px;
     font-weight: normal;
     padding-bottom: 30px;
 }
@@ -97,7 +98,7 @@
     height: 10px;
     background-color: transparent;
     border-radius: 50%;
-    margin: 0 5px -200px ;
+    margin: 0 5px;
     display: inline-block;
     cursor: pointer;
     border: solid #ddd 1px;
@@ -121,8 +122,17 @@
     margin-right: -150px;
 }
 
+.prev-button:hover{
+    animation: hoverPrevButton 1s forwards; 
+
+}
+
 .next-button {
     margin-left: -150px;
     margin-right: 150px;
+}
+
+.next-button:hover {
+    animation: hoverNextButton 1s forwards;
 }
 
